force-app/main/default/objects/Document_Approval_Email_Rule__mdt/Document_Approval_Email_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Document Approval Email Rule</label>
    <pluralLabel>Document Approval Email Rules</pluralLabel>
</CustomObject>