force-app/main/default/objects/Document_Approval_Email_Rule__mdt/fields/Approval_Email_Template_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Email_Template_Developer_Name__c</fullName>
    <label>Approval Email Template Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>