force-app/main/default/objects/Document_Approval_Email_Rule__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Healthcare Directive</fullName>
            </value>
            <value>
                <fullName>Arveafkald</fullName>
            </value>
            <value>
                <fullName>Arveforskudskontrakt</fullName>
            </value>
            <value>
                <fullName>Bobehandling</fullName>
            </value>
            <value>
                <fullName>Børnetestamente</fullName>
            </value>
            <value>
                <fullName>Enduring Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Forhåndssamtykke til uskiftet bo</fullName>
            </value>
            <value>
                <fullName>Framtidsfullmakt</fullName>
            </value>
            <value>
                <fullName>Fremtidsfuldmagt</fullName>
            </value>
            <value>
                <fullName>Gavebrev</fullName>
            </value>
            <value>
                <fullName>Generalfuldmagt</fullName>
            </value>
            <value>
                <fullName>Generalfullmakt</fullName>
            </value>
            <value>
                <fullName>Gældsbrev</fullName>
            </value>
            <value>
                <fullName>Gåvobrev</fullName>
            </value>
            <value>
                <fullName>Købsaftale</fullName>
            </value>
            <value>
                <fullName>Min sidste vilje</fullName>
            </value>
            <value>
                <fullName>Pantebrev</fullName>
            </value>
            <value>
                <fullName>Probate Administration</fullName>
            </value>
            <value>
                <fullName>Salgs- og pantsætningsforbud</fullName>
            </value>
            <value>
                <fullName>Samboavtal</fullName>
            </value>
            <value>
                <fullName>Samejeoverenskomst</fullName>
            </value>
            <value>
                <fullName>Samäganderättsavtal</fullName>
            </value>
            <value>
                <fullName>Skuldebrev</fullName>
            </value>
            <value>
                <fullName>Testamente</fullName>
            </value>
            <value>
                <fullName>Testamente 30%-regel</fullName>
            </value>
            <value>
                <fullName>Vårdnadstestamente</fullName>
            </value>
            <value>
                <fullName>Will</fullName>
            </value>
            <value>
                <fullName>Ægtepagt</fullName>
            </value>
            <value>
                <fullName>Äktenskapsförord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>