force-app/main/default/objects/Document_Approval_Email_Rule__mdt/fields/FromEmail__c.field-meta.xml
<CustomField>
    <fullName>FromEmail__c</fullName>
    <label>FromEmail</label>
    <required>true</required>
    <type>Email</type>
</CustomField>