force-app/main/default/objects/Document_Approval_Email_Rule__mdt/fields/Market_Unit__c.field-meta.xml
<CustomField>
    <fullName>Market_Unit__c</fullName>
    <label>Market Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DFJ_DK</fullName>
                <default>true</default>
                <label>DFJ_DK</label>
            </value>
            <value>
                <fullName>FA_SE</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>