force-app/main/default/objects/Document_Approval_Email_Rule__mdt/fields/Requires_Email_on_Completion__c.field-meta.xml
<CustomField>
    <fullName>Requires_Email_on_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Email on Completion</label>
    <type>Checkbox</type>
</CustomField>