force-app/main/default/objects/Document_Approval_Email_Rule__mdt/fields/Requires_Public_Registration__c.field-meta.xml
<CustomField>
    <fullName>Requires_Public_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Public Registration</label>
    <type>Checkbox</type>
</CustomField>