force-app/main/default/objects/Document_Approval_Email_Rule__mdt/validationRules/Approval_Email_Template_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Email_Template_Required</fullName>
    <active>true</active>
    <description>Ensures that if the checkbox Requires_Email_on_Approval__c is selected, then the field Approval_Email_Template_Developer_Name__c is not left blank.</description>
    <errorConditionFormula>AND(
    Requires_Email_on_Approval__c,
    ISBLANK(Approval_Email_Template_Developer_Name__c)
)</errorConditionFormula>
    <errorDisplayField>Approval_Email_Template_Developer_Name__c</errorDisplayField>
    <errorMessage>Approval Email Template must be filled in when &quot;Requires Email on Approval&quot; is checked.</errorMessage>
</ValidationRule>