force-app/main/default/objects/Document_Approval_Email_Rule__mdt/validationRules/Completion_Email_Template_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_Email_Template_Required</fullName>
    <active>true</active>
    <description>Ensures that if the checkbox Requires_Email_on_Completion__c is selected, then the field Completion_Email_Template_Developer_Name__c is not left blank.</description>
    <errorConditionFormula>AND(
    Requires_Email_on_Completion__c,
    ISBLANK(Completion_Email_Template_Developer_Name__c)
)</errorConditionFormula>
    <errorDisplayField>Completion_Email_Template_Developer_Name__c</errorDisplayField>
    <errorMessage>Completion Email Template must be filled in when &quot;Requires Email on Completion&quot; is checked.</errorMessage>
</ValidationRule>