force-app/main/default/objects/Document_Approval_Email_Rule__mdt/listViews/Swedish_Rules.listView-meta.xml
<ListView>
    <fullName>Swedish_Rules</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Document_Type__c</columns>
    <columns>Requires_Email_on_Approval__c</columns>
    <columns>Requires_Email_on_Completion__c</columns>
    <columns>Requires_Public_Registration__c</columns>
    <columns>Approval_Email_Template_Developer_Name__c</columns>
    <columns>Completion_Email_Template_Developer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>FA_SE</value>
    </filters>
    <label>Swedish Rules</label>
    <language>en_US</language>
</ListView>